--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type = "radio" id="evening" name="time" value ="Evening">
       <label for="morning"> Evening (1600-2100) </label></div><br>
       <div class="feature-form">
-    <p> What is your favioute feature of the gym? </p>
+    <p> What is your favorite  feature of the gym? </p>
     <select name ="dropdown-feature" id="dropdown-feature" required> 
         <option disabled selected value> Select faviourte </option>
         <option value ="Community"> Community </option>
