--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="feature-form">
     <p> What is your favorite  feature of the gym? </p>
     <select name ="dropdown-feature" id="dropdown-feature" required> 
-        <option disabled selected value> Select faviourte </option>
+        <option disabled selected value> Select favorite </option>
         <option value ="Community"> Community </option>
         <option value ="Classes"> Classes </option>
         <option value ="Equipment"> Equipment </option>
