--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="dropdown-form"
       <label for="dropdown"> Choose what you enjoy the most: </label> <br>
       <select name ="dropdown" id="dropdown" required> 
-        <option disabled selected value> Select faviourte </option>
+        <option disabled selected value> Select favorite </option>
         <option value ="Powerlifting"> Powerlifting </option>
-        <option value ="Bodybuilding"> Bodybuidling </option>
+        <option value ="Bodybuilding"> Bodybuilding </option>
         <option value ="Crossfit"> Crossfit </option>
         <option value ="General wellness"> General wellness </option>
       </select>
