fixed unclosed div tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label for ="age" id="number-label"> Age: </label><br>
       <input type ="number" id ="number" name="age" min ="14" max = "85" placeholder="Age"required> <br>
       <br>
-      <div class="dropdown-form"
+      <div class="dropdown-form">
       <label for="dropdown"> Choose what you enjoy the most: </label> <br>
       <select name ="dropdown" id="dropdown" required> 
         <option disabled selected value> Select favorite </option>
